--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>ahihi</title>
+	<title>Profile</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/select2.min.css">
@@ -25,7 +25,7 @@
 				</div>
 				<div class="col-sm-10">
 					<div class="histaff-header-content text-center">
-						<h1>CANDIDATE'S FORM</h1>
+						<h1>Curriculum Vitae</h1>
 					</div>
 				</div>
 			</div>
@@ -83,9 +83,10 @@
 								</div>
 								<div class="row padding-tb-15 margin-b-15">
 									<div class="col-md-3">
-										<input type="file" class="file-upload" name="candidate-image" id="candidate-image" style="display: none;" accept="image/*">
+										<!-- <input type="file" class="file-upload" name="candidate-image" id="candidate-image" style="display: none;" accept="image/*"> -->
 										<div class="histaff-upload-image" id="file-btn">
-											<i class="fa fa-camera" aria-hidden="true"></i>
+                                            <img src= "images/avatar-02.jpg" alt="avata">
+											<!-- <i class="fa fa-camera" aria-hidden="true"></i> -->
 										</div>
 									</div>
 									<div class="col-md-9">
