--- a/index.html
+++ b/index.html
@@ -38,10 +38,16 @@
 					<div class="histaff-side-bar background-white border-radius-5">
 						<div class="side-bar-content">
 							<ul>
-								<li id="side-bar-info">
+                                <li id="side-bar-info">
 									<a href="#histaff-info">
 										<i class="fa fa-user-circle-o" aria-hidden="true"></i>
-										Sơ yếu lý lịch
+										INTRODUCTION
+									</a>
+								</li>
+								<li id="side-bar-education">
+									<a href="#histaff-education">
+										<i class="fa fa-graduation-cap" aria-hidden="true"></i>
+										EDUCATION
 									</a>
 								</li>
 								<li id="side-bar-education">
@@ -78,7 +84,7 @@
 							<div class="container">
 								<div class="row">
 									<div class="col-sm-12 histaff-item-group-header">
-										<h3>Sơ yếu lý lịch</h3>
+										<h3>Introduction</h3>
 									</div>
 								</div>
 								<div class="row padding-tb-15 margin-b-15">
@@ -91,186 +97,43 @@
 									</div>
 									<div class="col-md-9">
 										<div class="row margin-b-15">
-											<div class="col-md-4">
+                                            <div class="col-mb-12" style="text-align: justify;">
+                                                Graduated in software engineering, having 5 years of experience in the software field, proficient in VB.Net and C# programming languages.
+                                                Knowledge of UI/UX .Net, .Net Core, Entity Framework, design pattern. 
+                                                Long experience with T-SQL and PLSQL database programming languages.
+                                                Understanding and applying Redis in some systems, to optimize data access.
+                                                Looking forward to the opportunity to work with large systems, learn and research more new technologies applied in work to improve my knowledge and bring benefits to the Company. 
+                                                Ability to work under pressure and complete projects on time. I am also dynamic in problem-solving, have a fast learning attitude, and have the ability to work effectively in a team environment and independently.
+                                                <br>
+                                                <b>Strive to be a good manager.</b>
+                                            </div>
+											<!-- <div class="col-md-4">
 												<label>Họ và tên đệm</label><span class="required">*</span><br>
 												<input type="text" name="candidate-fname" id="candidate-fname" class="item-control active">
 											</div>
 											<div class="col-md-4">
 												<label>Tên</label><span class="required">*</span><br>
 												<input type="text" name="candidate-lname" id="candidate-lname" class="item-control">
-											</div>
+											</div> -->
 										</div>
 										<div class="row">
 											<div class="col-md-8">
-												<label>Vị trí ứng tuyển</label><br>
+												<!-- <label>Vị trí ứng tuyển</label><br>
 												<select name="candidate-position" id="candidate-position" class="item-control" style="width: 100%;">
 													<option value="1">Giám đốc bộ phận</option>
-												</select>
+												</select> -->
 											</div>
 											<div class="col-md-4">
-												<input type="file" name="candidate-cv" id="candidate-cv" style="display: none;" accept= "application/msword, application/vnd.ms-excel, application/vnd.ms-powerpoint,text/plain, application/pdf, image/*">
+												<!-- <input type="file" name="candidate-cv" id="candidate-cv" style="display: none;" accept= "application/msword, application/vnd.ms-excel, application/vnd.ms-powerpoint,text/plain, application/pdf, image/*">
 												<div class="hs-button">
 													<a href="#" id="uploadCV"><i class="fa fa-paperclip" aria-hidden="true"></i> Upload CV</a>
 												</div>
 												<div class="hs-button">
 													<a href="#">Xem JD</a>
 												</div>
-												<div class="clear"></div>
+												<div class="clear"></div> -->
 											</div>
 										</div>
-									</div>
-								</div>
-
-								<div class="row padding-tb-15 margin-b-15">
-									<div class="col-md-3">
-										<label>Giới tính</label><span class="required">*</span><br>
-										<select name="candidate-gender" id="candidate-gender" class="item-control" style="width: 100%;">
-											<option value="1">Nam</option>
-										</select>
-									</div>
-									<div class="col-md-3">
-										<label>Tình trạng hôn nhân</label><br>
-										<select name="candidate-maried" id="candidate-maried" class="item-control" style="width: 100%;">
-											<option value="1">Chưa vợ</option>
-										</select>
-									</div>
-									<div class="col-md-3">
-										<label>Dân tộc</label><br>
-										<select name="candidate-native" id="candidate-native" class="item-control" style="width: 100%;">
-											<option value="1">Nam</option>
-										</select>
-									</div>
-									<div class="col-md-3">
-										<label>Tôn giáo</label><br>
-										<select name="candidate-religion" id="candidate-religion" class="item-control" style="width: 100%;">
-											<option value="1">Phật giáo</option>
-										</select>
-									</div>
-								</div>
-
-								<div class="row padding-tb-15 margin-b-15">
-									<div class="col-md-3">
-										<label>Ngày sinh</label><span class="required">*</span><br>
-										<input type="date" name="candidate-birthDate" id="candidate-birthDate" class="item-control">
-									</div>
-									<div class="col-md-3">
-										<label>Nơi sinh</label><span class="required">*</span><br>
-										<select name="candidate-birthPlace" id="candidate-birthPlace" class="item-control" style="width: 100%;">
-											<option value="1">Nhà</option>
-										</select>
-									</div>
-									<div class="col-md-3">
-										<label>Quốc tịch</label><br>
-										<select name="candidate-nation" id="candidate-nation" class="item-control" style="width: 100%;">
-											<option value="1">Việt Nam</option>
-										</select>
-									</div>
-								</div>
-
-								<div class="row padding-tb-15 margin-b-15">
-									<div class="col-md-3">
-										<label>CMND/CCCD</label><span class="required">*</span><br>
-										<select name="candidate-typeID" id="candidate-typeID" class="item-control" style="width: 100%;">
-											<option value="1">CMND</option>
-											<option value="2">CCCD</option>
-										</select>
-									</div>
-									<div class="col-md-3">
-										<label>Ngày cấp</label><br>
-										<input type="date" name="candidate-idFromDate" id="candidate-idFromDate" class="item-control">
-									</div>
-									<div class="col-md-3">
-										<label>Nơi cấp</label><br>
-										<select name="candidate-idPlace" id="candidate-idPlace" class="item-control" style="width: 100%;">
-											<option value="1">Việt Nam</option>
-										</select>
-									</div>
-									<div class="col-md-3">
-										<label>Ngày hết hạn</label><br>
-										<input type="date" name="candidate-idEndDate" id="candidate-idEndDate" class="item-control">
-									</div>
-								</div>
-
-								<div class="row padding-tb-15">
-									<div class="col-sm-12 histaff-item-group-header">
-										<h4><span>Thông tin liên lạc</span></h4>
-									</div>
-								</div>
-
-								<div class="row padding-tb-15 margin-b-15">
-									<div class="col-md-3">
-										<label>Điện thoại cá nhân</label><br>
-										<input type="text" name="candidate-mobilePhone" id="candidate-mobilePhone" class="item-control">
-									</div>
-									<div class="col-md-3">
-										<label>Điện thoại cố định</label><br>
-										<input type="date" name="candidate-phone" id="candidate-phone" class="item-control">
-									</div>
-									<div class="col-md-3">
-										<label>Email</label><br>
-										<input type="email" name="candidate-email" id="candidate-email" class="item-control">
-									</div>
-								</div>
-
-								<div class="row padding-tb-15 margin-b-15">
-									<div class="col-md-6">
-										<label>Địa chỉ thường trú</label><br>
-										<input type="text" name="candidate-perAddress" id="candidate-perAddress" class="item-control">
-									</div>
-								</div>
-
-								<div class="row padding-tb-15 margin-b-15">
-									<div class="col-md-3">
-										<label>Tỉnh/Thành phố</label><span class="required">*</span><br>
-										<select name="candidate-perProvince" id="candidate-perProvince" class="item-control" style="width: 100%;">
-											<option value="1">Hà Nội</option>
-											<option value="2">TP Hồ Chí Minh</option>
-										</select>
-									</div>
-									<div class="col-md-3">
-										<label>Quận/Huyện</label><br>
-										<select name="candidate-perDistrict" id="candidate-perDistrict" class="item-control" style="width: 100%;">
-											<option value="1">Quận 12</option>
-										</select>
-									</div>
-									<div class="col-md-3">
-										<label>Phường/Xã</label><br>
-										<select name="candidate-perWard" id="candidate-perWard" class="item-control" style="width: 100%;">
-											<option value="1">Thới An</option>
-										</select>
-									</div>
-								</div>
-
-								<div class="row padding-tb-15 margin-b-15">
-									<div class="col-md-6">
-										<label>Địa chỉ tạm trú</label><br>
-										<input type="text" name="candidate-navAddress" id="candidate-navAddress" class="item-control">
-									</div>
-									<div class="col-md-3" style="margin-top: 40px;">
-										<input type="checkbox" name="candidate-copyPer" id="candidate-copyPer">
-										<label>Sao chép địa chỉ thường trú</label>
-									</div>
-								</div>
-
-								<div class="row padding-tb-15 margin-b-15">
-									<div class="col-md-3">
-										<label>Tỉnh/Thành phố</label><span class="required">*</span><br>
-										<select name="candidate-navProvince" id="candidate-navProvince" class="item-control" style="width: 100%;">
-											<option value="1">Hà Nội</option>
-											<option value="2">TP Hồ Chí Minh</option>
-										</select>
-									</div>
-									<div class="col-md-3">
-										<label>Quận/Huyện</label><br>
-										<select name="candidate-navDistrict" id="candidate-navDistrict" class="item-control" style="width: 100%;">
-											<option value="1">Quận 12</option>
-										</select>
-									</div>
-									<div class="col-md-3">
-										<label>Phường/Xã</label><br>
-										<select name="candidate-nvaWard" id="candidate-nvaWard" class="item-control" style="width: 100%;">
-											<option value="1">Thới An</option>
-										</select>
 									</div>
 								</div>
 							</div>
@@ -280,17 +143,22 @@
 							<div class="container">
 								<div class="row">
 									<div class="col-sm-12 histaff-item-group-header">
-										<h3>Thông tin trình độ</h3>
+										<h3>EDUCATION</h3>
 									</div>
 								</div>
-								<div class="row padding-tb-15 margin-b-15">
+								<div class="row padding-tb-15 margin-b-15" style="border-radius: 25px; border: 2px solid #ff00005e;">
 									<div class="col-md-3">
-										<label>Trình độ văn hóa</label><br>
-										<select name="candidate-trainingLevel" id="candidate-trainingLevel" class="item-control" style="width: 100%;">
-											<option value="1">12/12</option>
-										</select>
+										<div class="histaff-avata-edu" id="file-btn">
+                                            <img src= "images/avata-edu-khtn.png" alt="avata-edu">
+                                        </div>
+                                        <div class= "container">
+                                            Oct 2010 - May 2014 <br>
+                                            VIET NAM NATIONAL UNIVERSITY HO CHI MINH CITY UNIVERSITY OF SCIENCE <br>
+                                            Major: Software Development
+                                        </div>
+                                       
 									</div>
-									<div class="col-md-3">
+									<div class="col-md-9">
 										<label>Trình độ học vấn</label><br>
 										<select name="candidate-learningLevel" id="candidate-learningLevel" class="item-control" style="width: 100%;">
 											<option value="1">Đại học</option>
